--- a/templates/activity.html
+++ b/templates/activity.html
@@ -1,2 +1,218 @@
-    <testttt>
-        ??
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta name="keywords" content="" />
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<!-- bootstrap-css -->
+<link href="../static/css/bootstrap-activity.css" rel="stylesheet" type="text/css" media="all" />
+<!--// bootstrap-css -->
+<!-- css -->
+<link rel="stylesheet" href="../static/css/style-activity.css" type="text/css" media="all" />
+<link href="../static/css/freelancer.min.css" rel="stylesheet">
+<!--// css -->
+<!-- font-awesome icons -->
+<link href="../static/css/font-awesome-activity.css" rel="stylesheet"> 
+<!-- //font-awesome icons -->
+<!-- font -->
+<link href="http://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i" rel="stylesheet">
+<link href="http://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300' rel='stylesheet' type='text/css'>
+<!-- //font -->
+
+</head>
+<body>
+	<!-- banner -->
+	<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+		
+			<div class="container">
+				<div class="header-left">
+					<div class="w3layouts-logo">
+						<h1>
+							<a href="//TODO"><span>Njoy</span> Travels</a>
+						</h1>
+					</div>
+				</div>
+				<div class="header-right">
+					<!--div class="w3-header-top">
+						<ul>
+							<li><i class="fa fa-phone" aria-hidden="true"></i> : +1 234 567 9871</li>
+							<li><i class="fa fa-envelope" aria-hidden="true"></i> : <a href="mailto:info@example.com">mail@example.com</a></li>
+						</ul>
+					
+					</div-->
+					<div class="w3-header-bottom">
+						<div class="top-nav">
+							<nav class="navbar navbar-default">
+									<div class="navbar-header">
+										<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+											<span class="sr-only">Toggle navigation</span>
+											<span class="icon-bar"></span>
+											<span class="icon-bar"></span>
+											<span class="icon-bar"></span>
+										</button>
+									</div>
+								<!-- Collect the nav links, forms, and other content for toggling -->
+								<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+									<ul class="nav navbar-nav">
+										<li><a class="active" href="index.html">Home</a></li>
+										<li><a href="about.html">About</a></li>
+										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Codes<span class="caret"></span></a>
+											<ul class="dropdown-menu">
+												<li><a class="hvr-bounce-to-bottom" href="icons.html">Icons</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>          
+											</ul>
+										</li>								
+										<li><a href="gallery.html">Gallery</a></li>
+										<li><a href="contact.html">Contact</a></li>
+									</ul>	
+									<div class="clearfix"> </div>
+								</div>	
+							</nav>		
+						</div>
+						<div class="agileinfo-social-grids">
+							<ul>
+								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+								<li><a href="#"><i class="fa fa-rss"></i></a></li>
+								<li><a href="#"><i class="fa fa-vk"></i></a></li>
+							</ul>
+						</div>
+						<div class="clearfix"> </div>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		
+		
+	</nav>
+        <!-- //banner -->
+        <header class="masthead bg-primary text-white text-center">
+                <div class="container d-flex align-items-center flex-column">
+            
+                  <!-- Masthead Avatar Image -->
+                  <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
+            
+                  <!-- Masthead Heading -->
+                  <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+            
+                  <!-- Icon Divider -->
+                  <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon">
+                      <i class="fas fa-star"></i>
+                    </div>
+                    <div class="divider-custom-line"></div>
+                  </div>
+            
+                  <!-- Masthead Subheading -->
+                  <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+            
+                </div>
+              </header>
+	<!-- welcome -->
+	<div class="welcome">
+		<div class="container">
+			<div class="w3l-heading">
+				<h2>Activities</h2>
+			</div>
+			<div class="w3-welcome-grids">
+				<div class="col-md-7 w3-welcome-left">
+					<h5>act1</h5>
+					<p>act11</span></p>
+					<div class="w3l-button">
+						<a href="single.html">More</a>
+					</div>
+				</div>
+				<div class="col-md-5 w3ls-welcome-img1">
+					<img src="../static/img/portfolio/cake.png" alt="" />
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="w3-welcome-grids w3-welcome-bottom">
+				<div class="col-md-5 w3ls-welcome-img1 w3ls-welcome-img2">
+					<img src="../static/img/portfolio/cake.png" alt="" />
+				</div>
+				<div class="col-md-7 w3-welcome-left">
+					<h5>Lorem ipsum dolor sit amet</h5>
+					<p>Ut fringilla euismod sagittis. Cras semper ante sapien, in ornare nisi euismod eu. Morbi dapibus est non leo vestibulum aliquet. Sed viverra nisi pharetra, scelerisque nisi eu, tempus nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In pellentesque, lectus at auctor luctus, lacus nibh dignissim ante, sed maximus arcu odio vitae lectus. <span>Phasellus vestibulum velit sed nisi ultricies scelerisque. Vivamus ligula mauris, euismod in dictum id, tempus ac odio. Etiam tristique felis eros, tincidunt interdum elit gravida et. Donec porttitor vehicula tortor, malesuada aliquet nibh finibus ac. Maecenas consectetur nisi ipsum, blandit finibus quam tristique vitae.</span></p>
+					<div class="w3l-button">
+						<a href="single.html">More</a>
+					</div>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
+	</div>
+	<!-- //welcome -->
+
+	<!-- newsletter 
+	<div class="jarallax newsletter">
+		<div class="container">
+			<div class="w3l-heading newsletter-heading">
+				<h3>Join The Club</h3>
+			</div>
+		</div>
+		<div class="w3-agileits-newsletter">
+			<div class="subscribe-grid">
+				<form action="#" method="post">
+					<input type="text" placeholder="Subscribe" name="Subscribe" required="">
+					<button class="btn1"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+				</form>
+			</div>
+		</div>
+	</div>
+	 //newsletter -->
+	<!-- footer -->
+	<div class="footer">
+		<div class="container">
+			<div class="agile-footer-grids">
+				<div class="col-md-4 agile-footer-grid">
+					<h4>CESA</h4>
+					<p>1</span></p>
+				</div>
+				<div class="col-md-4 agile-footer-grid">
+					<h4>Twitter Posts</h4>
+					<ul class="w3agile_footer_grid_list">
+						<li>Ut aut reiciendis voluptatibus maiores <a href="#">http://example.com</a> alias, ut aut reiciendis.
+							<span><i class="fa fa-twitter" aria-hidden="true"></i></span></li>
+						<li>Itaque earum rerum hic tenetur a sapiente delectus <a href="#">http://mail.com</a> ut aut
+							voluptatibus.<span><i class="fa fa-twitter" aria-hidden="true"></i> 03 days ago</span></li>
+					</ul>
+				</div>
+				<div class="col-md-2 agile-footer-grid">
+					<h4>Contacts</h4>
+					<ul>
+						<li>123455<a href="single.html">CESA</a></li>
+					</ul>
+				</div>
+				<div class="col-md-2 agile-footer-grid">
+					<h4>Navigation</h4>
+					<ul>
+						<li class="text"><a href="index.html">Home</a></li>
+						<li class="text"><a href="about.html">About</a></li>
+						<li class="text"><a href="icons.html">Icons</a></li>
+						<li class="text"><a href="typography.html">Typography</a></li>
+						<li class="text"><a href="gallery.html">Gallery</a></li>
+						<li class="text"><a href="contact.html">Contact</a></li>
+					</ul>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
+	</div>
+	<!-- //footer -->
+	<!-- copyright -->
+	<div class="agileits-w3layouts-copyright">
+		<div class="container">
+			<p>Copyright<a target="_blank"></a></p>
+		</div>
+	</div>
+	<!-- //copyright -->
+	<!-- here stars scrolling icon -->
+	
+	<!-- //here ends scrolling icon -->
+</body>	
+</html>
