--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -6205,7 +6205,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #db6a28 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
