--- a/templates/activity.html
+++ b/templates/activity.html
@@ -13,7 +13,7 @@
         <!--// bootstrap-css -->
         <!-- css -->
         <link rel="stylesheet" href="../static/css/style-activity.css" type="text/css" media="all" />
-        <link href="../static/css/freelancer.min.css" rel="stylesheet">
+        <link href="../static/css/freelancer.css" rel="stylesheet">
         <!--// css -->
         <!-- font-awesome icons -->
         <link href="../static/css/font-awesome-activity.css" rel="stylesheet">
@@ -136,40 +136,36 @@
         <div class="welcome">
                 <div class="container">
                         <div class="w3l-heading">
-                                <h2>Activities</h2>
+                                <h2>往期活动回顾</h2>
                         </div>
                         <div class="w3-welcome-grids">
                                 <div class="col-md-7 w3-welcome-left">
-                                        <h5>act1</h5>
-                                        <p>act11</span></p>
+                                        <h5>接收心动的信号</h5>
+                                        <p>这个十一月，香槟下起了雪，但我并不感到寒冷，只因灯火里有你相伴。</br>
+                                                香槟版《心动的信号》结束了，留下的是回忆，带走的是恋情。</br>
+                                                保龄球馆里的笑声连连、图书馆里一人一半的耳机、卡拉OK厅里的歌声与你......</br>
+                                                有缘人在此相逢相遇，相识相识，于浪漫雪天下谱写出一段独属于他和她的冬日恋歌。</span></p>
                                         <div class="w3l-button">
-                                                <a href="single.html">More</a>
+                                                <a href="https://mp.weixin.qq.com/s?__biz=MzA5OTAxODgxMg==&mid=502888510&idx=1&sn=ae02b400208675250d27bfa8c1b6a9e3">More</a>
                                         </div>
                                 </div>
                                 <div class="col-md-5 w3ls-welcome-img1">
-                                        <img src="../static/img/portfolio/cake.png" alt="" />
+                                        <img src="../static/img/activity/xindong.png" alt="" />
                                 </div>
                                 <div class="clearfix"> </div>
                         </div>
                         <div class="w3-welcome-grids w3-welcome-bottom">
                                 <div class="col-md-5 w3ls-welcome-img1 w3ls-welcome-img2">
-                                        <img src="../static/img/portfolio/cake.png" alt="" />
+                                        <img src="../static/img/activity/sheying.png" alt="" />
                                 </div>
                                 <div class="col-md-7 w3-welcome-left">
-                                        <h5>Lorem ipsum dolor sit amet</h5>
-                                        <p>Ut fringilla euismod sagittis. Cras semper ante sapien, in ornare nisi
-                                                euismod eu. Morbi dapibus est non leo vestibulum aliquet. Sed viverra
-                                                nisi pharetra, scelerisque nisi eu, tempus nibh. Vestibulum ante ipsum
-                                                primis in faucibus orci luctus et ultrices posuere cubilia Curae; In
-                                                pellentesque, lectus at auctor luctus, lacus nibh dignissim ante, sed
-                                                maximus arcu odio vitae lectus. <span>Phasellus vestibulum velit sed
-                                                        nisi ultricies scelerisque. Vivamus ligula mauris, euismod in
-                                                        dictum id, tempus ac odio. Etiam tristique felis eros, tincidunt
-                                                        interdum elit gravida et. Donec porttitor vehicula tortor,
-                                                        malesuada aliquet nibh finibus ac. Maecenas consectetur nisi
-                                                        ipsum, blandit finibus quam tristique vitae.</span></p>
+                                        <h5>把香槟拍给你看</h5>
+                                        <p>时间真的过得好快，一转眼我们已经过完了农历的新年。嘿，你看过雪花飘落的时候吗？那一刻，风特别大，簌大的雪花斜斜地飘落下来，你甚至能看到雪花清晰的形状。<span>
+                                                那，你看过雪中的香槟吗？</br>
+                                                没看过？</br>
+                                                没关系，我来把我眼中的香槟拍给你看。</span></p>
                                         <div class="w3l-button">
-                                                <a href="single.html">More</a>
+                                                <a href="https://mp.weixin.qq.com/s?__biz=MzA5OTAxODgxMg==&mid=502888600&idx=1&sn=e53bc0a39be9f3d5445461e9d8cb5525">More</a>
                                         </div>
                                 </div>
                                 <div class="clearfix"> </div>
